<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/name" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/amount"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/amount" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/type"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/debit"
                    android:id="@+id/debit"
                    android:enabled="true"
                    android:checked="true"
                    android:clickable="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit"
                    android:id="@+id/credit"
                    android:clickable="true"
                    android:enabled="true"
                    android:layout_marginLeft="50dp" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/purpose"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/purpose" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>