<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:weightSum="1"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:baselineAligned="true">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal"
        android:enabled="true"
        android:singleLine="true"
        android:hint="@string/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/address"
        android:enabled="true"
        android:layout_gravity="center_horizontal"
        android:hint="@string/address" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startBtn"
        android:id="@+id/Btn_start"
        android:layout_gravity="center_horizontal"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:background="@color/menu"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="@color/menu_text"
        android:textStyle="bold"
        android:onClick="StartBtnClick"
        android:clickable="true"/>

</LinearLayout>